cmake_minimum_required(VERSION 3.0.0)
project(native_canvas VERSION 0.1.0)

set (CMAKE_CXX_STANDARD 17)
# set (CMAKE_BUILD_TYPE Debug)
set (CMAKE_BUILD_TYPE Release)

include(CTest)
include_directories(../skia)
enable_testing()

add_library(native_canvas SHARED native_canvas.cpp csscolorparser.cpp)

target_compile_options(native_canvas PRIVATE -Ofast -Wno-return-type -Wno-unused-result -Wno-write-strings -Wno-attributes)
# target_compile_options(native_canvas PRIVATE -g)

target_link_libraries(native_canvas ${CMAKE_SOURCE_DIR}/../skia/out/Release/libskia.a)
target_link_libraries(native_canvas "-Wl,--whole-archive ${CMAKE_SOURCE_DIR}/../skia/out/Release/libskshaper.a -Wl,--no-whole-archive")
target_link_libraries(native_canvas ${CMAKE_SOURCE_DIR}/../skia/out/Release/libharfbuzz.a)
target_link_libraries(native_canvas ${CMAKE_SOURCE_DIR}/../skia/out/Release/libpathkit.a)
target_link_libraries(native_canvas ${CMAKE_SOURCE_DIR}/../skia/out/Release/libsvg.a)
target_link_libraries(native_canvas ${CMAKE_SOURCE_DIR}/../skia/out/Release/libskresources.a)
target_link_libraries(native_canvas ${CMAKE_SOURCE_DIR}/../skia/out/Release/libskparagraph.a)
target_link_libraries(native_canvas ${CMAKE_SOURCE_DIR}/../skia/out/Release/libparticles.a)
target_link_libraries(native_canvas ${CMAKE_SOURCE_DIR}/../skia/out/Release/libsktext.a)
target_link_libraries(native_canvas ${CMAKE_SOURCE_DIR}/../skia/out/Release/libskunicode.a)
target_link_libraries(native_canvas ${CMAKE_SOURCE_DIR}/../skia/out/Release/libskcms.a)
target_link_libraries(native_canvas ${CMAKE_SOURCE_DIR}/../skia/out/Release/libfreetype2.a)
target_link_libraries(native_canvas ${CMAKE_SOURCE_DIR}/../skia/out/Release/libwuffs.a)
target_link_libraries(native_canvas ${CMAKE_SOURCE_DIR}/../skia/out/Release/libicu.a)
target_link_libraries(native_canvas ${CMAKE_SOURCE_DIR}/../skia/out/Release/libexpat.a)

# target_link_libraries(native_canvas /workspaces/skia-binaries/libskia.a)
# target_link_libraries(native_canvas /workspaces/skia-binaries/libskparagraph.a)
# target_link_libraries(native_canvas /workspaces/skia-binaries/libskshaper.a)
# target_link_libraries(native_canvas /workspaces/skia-binaries/libskunicode.a)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
